<resources>
    <string name="app_name">Good Recipes</string>

    <string name="login_activity_login">Login</string>

    <string name="register_activity_create_account">Create Account</string>

    <string name="register_activity_error_empty_email">Must enter an email</string>

    <string name="register_activity_error_empty_username">Must enter a username</string>

    <string name="register_activity_error_invalid_email">Incorrect email format</string>

    <string name="register_activity_error_passoword_invalid_length">Password must be greater than 7 characters</string>

    <string name="register_activity_error_passoword_not_equal_confirmPassword">Confirm Password must match</string>

    <string name="register_activity_error_passoword_empty">Must enter a password</string>

    <string name="login_activity_register">If you don\'t have a account please Register</string>

    <string name="prompt_email">Email</string>

    <string name="prompt_username">Username</string>

    <string name="prompt_password">Password</string>

    <string name="prompt_confirm_password">Confirm Password</string>

    <string name="action_sign_in">Sign in or register</string>

    <string name="action_register">Register</string>

    <string name="action_sign_in_short">Sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello home fragment</string>
    <string name="home_navigation_label">Home</string>
    <string name="add_new_navigation_label">Add New</string>
    <string name="list_my_recipes_navigation_label">List My Recipes</string>

    <string name="default_notification_channel_id">New Recipes</string>
    <string name="data_title">title</string>
    <string name="data_description">description</string>
    <string name="data_message_id">message_id</string>
</resources>
